welcome.lessons.welcome.array.indexof.value.IndexOfValue.scala.error
indexOfMaxValue:8: error: not found: value i
if (x==0){return i}
                 ^indexOfMaxValue:8: error: type mismatch;
 found   : Unit
 required: Int
if (x==0){return i}
^